@@ -1,4 +1,5 @@
 version 0.99.2 - XX-Apr-2010
+ . [FIX] ActionManager: removeByTag doesn't crash if action is also running (issue #841)
  . [FIX] Grid: simplied code, easier to maintain, added support for flipped textures
  . [FIX] Xcode: compiles OK with LLVM Compiler SDK 4.0beta2
 
